--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-
+    
 </body>
-<script  src="strawberrysoft-chat.js"></script>
+<script  src="./strawberrysoft-chat.js" type="text/javascript"></script>
 <script defer>
-new ChatBot({id: "chat-btn",socket: "localhost",btnTxt: "Let's chat"}).start()
+    new ChatBot({socket: "localhost",text: "Let's chat"}).start()
 </script>
 
 </html>
